# villa-thaifa

./: .env.example  .env.sample  .gitignore  .structureignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  PROJECT-CONTRACT.md  README.md  ROADMAP.md  STRUCTURE.md  STRUCTURE.txt  cliff.toml  config.json  implementation_plan.md  migration_changelog.md  package-lock.json  package.json  pyproject.toml  villa-thaifa.code-workspace
.archived/rules/: README.md
.claude-plugin/: plugin.json
.claude/agents/: browser-agent.md  calendar-agent.md  claude-md-agent.md  data-sync-checker.md  guest-communicator.md  html-report-generator.md  meta-agent.md  platform-validator.md  pricing-analyst.md  research-agent.md  reservation-manager.md
.claude/patterns/: decision-evaluator-agent-pattern.md
.claude/plans/: 2026-01-08-core-loop-simplification.md
.context/statuses/: README.md
ai/inventory/: sub-agent_registry.md
ai/registry/: sub-agent_registry.md
ai/rules/: archive-policy.md  organizational-ontology.md
ai/standards/: agent-team-roster.md  colors.md  (+5 more)
apps/: README.md
archive/: TODOs-legacy.md
data/: README.md
docs/: 2025-12-22-target-structure.md  README.md  lessons-learned.md  promotions.md  repo-organization-decision.md
ops/: handoff-2026-02-16-gemini-standardization.md
project/: STRUCTURE.md  TODOs.md
scripts/: artifact_inventory.py  domain_verify.py  validate_contracts.py
src/: CLAUDE.md
tasks/: 2026-01-24-extend-pricing-2026.md  2026-01-24-stop-sell-mars.md  active.md
tests/: test_scripts.py
tmp/: REPRISE-APRES-MIGRATION.md
(+385 files in other folders)
